--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -6,8 +6,8 @@
   <%= link_to "Sign up", new_registration_path(resource_name), class: link_class(extended_classes: "mb-2")  %>
 <% end -%>
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %> 
-  <%= link_to "Forgot your password?", new_password_path(resource_name), class: link_class(extended_classes: "mb-2") %>
+<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+  <%= link_to "Forgot your password?", new_password_path(resource_name), class: link_class(extended_classes: "mb-2"), id: "forget_password" %>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
