--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -8,6 +8,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag  'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" %>
   <%= javascript_include_tag "application", defer: true %>
+  <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/chart.js" %>
   <%#= javascript_include_tag 'https://js.stripe.com/v3/', 'data-turbolinks-track': 'reload' %>
 </head>
