create the sidenav and add workflow for reviewing PR

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,10 @@
   <body class="font-sans font-normal leading-normal text-gray-800 bg-white flex flex-col min-h-screen ">
     <header>
       <%= render "shared/flash_notice" %>
-      <%= render "shared/navbar" %>
+
     </header>
-    <main class="flex-grow">
+    <main class="flex-grow" id="root">
+      <%= render "shared/navbar" %>
       <%= content_for?(:content) ? yield(:content) : yield %>
     </main>
     <%= render "shared/footer" %>
